# odri_ros2

./: README.md
odri_examples/: CMakeLists.txt  package.xml
odri_examples/config/robots/: separate_legs.yaml  stretch_legs.yaml
odri_examples/include/: trajectory_test_base.hpp
odri_examples/include/odri_examples/: example_robot.hpp  stretch_robot.hpp
odri_examples/launch/: example_robot.py  stretch_robot.py
odri_examples/src/: example_robot.cpp  stretch_robot.cpp
odri_identification/: CMakeLists.txt  package.xml
odri_identification/config/: trajectory_test.yaml
odri_identification/include/odri_identification/: flying_arm_identification.hpp  trajectory_test_base.hpp
odri_identification/launch/: flying_arm_identification.py
odri_identification/src/: flying_arm_identification.cpp  trajectory_test_base.cpp
odri_interface/: CMakeLists.txt
odri_interface/config/: params.yaml  stretch_params.yaml
odri_interface/include/: robot_state_machine.hpp
odri_interface/include/odri_interface/: robot_interface.hpp  robot_state_machine.hpp
odri_interface/launch/: robot_interface.py  robot_state_machine.py
odri_interface/src/: robot_interface.cpp  robot_state_machine.cpp
odri_msgs/: CMakeLists.txt
odri_msgs/interfaces/msg/: RobotFullState.msg
odri_ros2_interface/: CMakeLists.txt  README.md  package.xml
odri_ros2_interface/config/: params.yaml  separate_legs_params.yaml  solo12_params.yaml  stretch_legs_params.yaml  tpl_params.yaml
odri_ros2_interface/include/odri_ros2_interface/: odri_ros2_interface.hpp  robot_interface.hpp  robot_state_machine.hpp
odri_ros2_interface/launch/: _robot_interface.launch.py  _robot_state_machine.launch.py  robot_interface.py  robot_state_machine.py
odri_ros2_interface/src/: odri_ros2_interface.cpp  robot_interface.cpp  robot_state_machine.cpp
odri_ros2_interface/src/nodes/: odri_ros2_interface.cpp  robot_interface.cpp  robot_state_machine.cpp
odri_ros2_msgs/: CMakeLists.txt  README.md  package.xml
